[project]
name = "python-314-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "playwright>=1.56.0",
    "polars>=1.35.2",
    "pydantic>=2.12.4",
    "tenacity>=9.1.2",
    "typer>=0.20.0",
]
