[project]
name = "python-314-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dask[dataframe]>=2025.11.0",
    "httpx>=0.28.1",
    "instructor>=1.13.0",
    "playwright>=1.56.0",
    "polars>=1.35.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.7.2",
    "tenacity>=9.1.2",
    "typer>=0.20.0",
]
